fix(tag): align start for tags on mobile, update path for Tag List and add containers

--- a/theme/themes/eea/extras/tagList.less
+++ b/theme/themes/eea/extras/tagList.less
@@ -27,7 +27,7 @@
   .tags-content {
     line-height: @tagsLineHeight;
     display: inline-flex;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     flex-direction: column;
   }
@@ -44,6 +44,7 @@
 
     .tags-content {
       flex-direction: inherit;
+      align-items: center;
     }
   }
 }
